# gare-pipeline-v2

./: .env.example  .gitignore  ISTRUZIONI_LANCIO.md  README.md  categorization_agent.py  cig_agent_sdk.py  config.py  consip_agent_sdk.py  coordinator_agent_integration.py  coordinator_agent_sdk.py  gazzetta_agent_impl.py  gazzetta_agent_sdk.py  gazzetta_scraper_improved.py  link_agent_sdk.py  persistence_agent_sdk.py  pipeline.py  pyproject.toml  requirements.txt  run_gazzetta_anno_per_anno.py  test_sdk_agents.py
config/: __init__.py  settings.py
docs/: CACHING_SYSTEM.md  CHECKPOINT_SYSTEM.md  MIGRATION_GUIDE.md  MODEL_INFO.md  OCDS_OPTIMIZATION.md  TOKEN_OPTIMIZATION.md
docs/architecture/: domain_model.md  interfaces_contracts.md  migration_plan.md  new_structure.md  system_diagrams.md
docs/plan/: refactor_steps.md
scripts/: dashboard_streamlit.py  enrich_durata_gemini.py  test_gemini_durata.py
src/: __init__.py  ai_client.py  main.py  update.py
src/analyzers/: concatenate.py  gazzetta_analyzer.py  gazzetta_analyzer_optimized.py  json_processor.py  json_processor_filtered.py  ocds_analyzer.py  ocds_analyzer_complete.py  ocds_analyzer_optimized.py  servizio_luce.py  transformer.py  verbali.py
src/config/: __init__.py  config.py
src/download/: __init__.py  ocds.py
src/enrich/: documents.py
src/export/: __init__.py  excel_exporter.py
src/extract/: cig_json.py  consip.py  filters.py  ocds.py
src/llm/: __init__.py  client.py
src/models/: __init__.py  categorization.py  enums.py  (+1 more)
tests/: __init__.py  conftest.py  test_models.py  test_utils.py
(+45 files in other folders)
